update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ Thumbs.db
 
 src/main/resources/application.properties
 !src/main/resources/application-example.properties
+/.vscode
+QuanLyThuVien/src/main/resources/application.properties
