--- a/QuanLyThuVien/src/main/resources/application.properties
+++ b/QuanLyThuVien/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-db.url=jdbc:sqlserver://DESKTOP-IDSR5L5:1433;databaseName=db_thuvien;encrypt=false
+db.url=jdbc:sqlserver://localhost:1433;databaseName=db_thuvien;encrypt=false;integratedSecurity=false
 db.user=sa
 db.password=1
 db.driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
