--- a/QuanLyThuVien/pom.xml
+++ b/QuanLyThuVien/pom.xml
@@ -10,7 +10,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>21</maven.compiler.release>
-        <exec.mainClass>com.mycompany.quanlythuvien.main</exec.mainClass>
+        <exec.mainClass>com.mycompany.quanlythuvien.Main</exec.mainClass>
     </properties>
 
     <dependencies>
