--- a/QuanLyThuVien/pom.xml
+++ b/QuanLyThuVien/pom.xml
@@ -27,5 +27,12 @@
             <artifactId>HikariCP</artifactId>
             <version>5.0.1</version>
         </dependency>
+
+        <!-- JFreeChart for Charts/Graphs -->
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.5.3</version>
+        </dependency>
     </dependencies>
 </project>
